16_subseq/grade.txt
Grading at Sat Mar  2 07:09:14 UTC 2019
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:25:22: error: ‘ans’ undeclared (first use in this function)
       if (ans_temp > ans){
                      ^
maxSeq.c:25:22: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:31:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
